# leo-editor

./: .bzrignore  .coveragerc  .dmypy.ini  .gitattributes  .gitignore  .gitmodules  .mypy.ini  .pdbrc  .travis.yml  ABOUT_LEO_EXE.TXT  About leo.exe.TXT  Breeze Dark Theme - KDE Plasma.leo  CONTRIBUTING.md  INSTALL.TXT  LICENSE  LICENSE.TXT  LICENSE.txt  MANIFEST  MANIFEST.in  Makefile  PKG-INFO.TXT  README.MD  README.TXT  README.md  README.rst  Readme-quick-install.TXT  blacken_leo.py  branches.md  build-check.bat  build-leo.bat  build-wheel.bat  build-without-pip.sh  build_log.txt  bzr-manifest.txt  create-leobat.bat  createLeoDistribution.py  do-leo.php  ekr-spellpyx.txt  flake8-leo.py  git-diff.bat  (+57 more)
.github/workflows/: build-leo-exe.yml  pythonpackage.yml
data/: leo.nsi  leo_to_html.xsl
debian/: changelog  control  copyright  files  leo.1  rules
docs/: .buildinfo  .ftpquota  .htaccess  FAQ.html  IPythonBridge.html  ListManagerDocs.html  Makefile  PyConChina2013-final-v2.srt  README.MD  SpeedReam.html  WhatIsLeo.html  abbreviations.html  acknowledgements.html  acknowledgements.html.txt  appendices.html  atShadow.html  atShadow.html.txt  basics1.html  basics2.html  basics3.html  basics4.html  cheatsheet.html  cheatsheet.html.txt  clickablelinks.html  coloring.html  commands.html  commands.html.txt  conf.py  console-gui.html  customizing.html  debuggers.html  debuggers.html.txt  default.css  design.html  design.html.txt  directives.html  docModeOnlyTest.html  download.html  ekr.html  emacs.html  (+91 more)
docs/_sources/: FAQ.html.txt.txt  FAQ.txt  IPythonBridge.html.txt.txt  abbreviations.txt  acknowledgements.html.txt.txt  appendices.html.txt.txt  appendices.txt  atShadow.txt  basics1.txt  basics2.txt  basics3.txt  basics4.txt  cheatsheet.html.txt.txt  cheatsheet.txt  coloring.html.txt.txt  commands.html.txt.txt  commands.txt  console-gui.html.txt.txt  customizing.html.txt.txt  customizing.txt  debuggers.html.txt.txt  directives.html.txt.txt  directives.txt  download.html.txt.txt  emacs.html.txt.txt  frontMatter.txt  glossary.html.txt.txt  glossary.txt  history.html.txt.txt  installing.html.txt.txt  installing.txt  intermediatetopics.html.txt.txt  intermediatetopics.txt  intro.txt  leo-university.html.txt.txt  leoBridge.html.txt.txt  leoInspect.txt  leoLinks.html.txt.txt  leomarkup.html.txt.txt  leonine-world.html.txt.txt  (+38 more)
docs/_static/: .gitignore  classic.css  custom.css  documentation_options.js
docs/html/: coloring.html.txt  conf.py  fixup.pl  installing.html.txt  scripting-miscellany.html.txt  slides.html.txt  techReport.html
docs/screen-shots/: .buildinfo  genindex.html  leo_toc.html  screen-shots.html  search.html  searchindex.js
docs/scripts/: upclick-min.js
docs/slides/: .buildinfo  FAQ.html  IPythonBridge.html  acknowledgements.html  appendices.html  cheatsheet.html  coloring.html  commands.html  console-gui.html  customizing.html  debuggers.html  directives.html  download.html  emacs.html  genindex.html  getting-started.html  glossary.html  history.html  installing.html  intermediatetopics.html  leoBridge.html  leoLinks.html  leo_toc.html  leoandotherprograms.html  leonine-world.html  license.html  objects.inv  plugins.html  preface.html  preliminaries.html  rstplugin3.html  running.html  screen-shots.html  screencasts.html  scripting-miscellany.html  search.html  searchindex.js  slides.html  testimonials.html  theory.html  (+13 more)
docs/tmp1/: show-leo-17b6169a2d0a1934.leo
leo/: __init__.py  do-leo.php  leo_diff.py
leo/Icons/: LeoLogo.ai  SplashScreen.xcf  SplashScreen.xpm
leo/commands/: abbrevCommands.py  baseCommands.py  bufferCommands.py  chapterCommands.py  checkerCommands.py  commanderCommands.py  commanderEditCommands.py  commanderFileCommands.py  commanderFindCommands.py  commanderHelpCommands.py  commanderOutlineCommands.py  controlCommands.py  convertCommands.py  debugCommands.py  editCommands.py  editFileCommands.py  gotoCommands.py  helpCommands.py  historyCommands.py  keyCommands.py  killBufferCommands.py  macroCommands.py  rectangleCommands.py  registerCommands.py  searchCommands.py  spellCommands.py  testCommands.py
leo/config/: __init__.py  exampleSettings.leo  inactiveSettings.leo  leo10pt.leo  leo12-10pt.leo  leo12pt.leo  leo14-12pt.leo  leo14pt-ekr.leo  leo14pt.leo  leoSettings.leo  themes.leo
leo/core/: .gitattributes  Komodo.leo  LeoPyRef.leo  at-thin branch notes.txt  bzr_version.py  commit_timestamp.json  coreGlobals.py  coreNodes.py  corrected-leoPy.leo  fail-leoPy.leo  format-code.py  iterative_ast.py  key-handling-notes.txt  komodo-test-data.py  leo.html  leo.py  leoAPI.py  leoApp.py  leoAsciiDoctor.py  leoAst.py  leoAst.pyi  leoAst2.py  leoAst_ns.py  leoAtFile.py  leoBackground.py  leoBeautify.py  leoBeautify.rs  leoBridge.py  leoBridgeTest.py  leoCache.py  leoChapters.py  leoCheck.py  leoColor.py  leoColorizer.py  leoCommands.py  leoCompare.py  leoConfig.py  leoDebugger.py  leoDynamicTest.py  leoEditCommands.py  (+81 more)
leo/doc/: .buildinfo  CheatSheet.leo  FAQ.html  FAQ.txt  INSTALL.TXT  IPythonBridge.html  IpythonBridge.txt  LICENSE.TXT  LeoDocs.leo  LeoDocs.leo.orig  LeoPostings.leo  LeoReleaseNotes.leo  LeoSlideShows.leo  LeoTechReport.pmd  PKG-INFO.TXT  README.TXT  __init__.py  abbreviations.txt  appendices.txt  atShadow.txt  basics1.txt  basics2.txt  basics3.txt  basics4.txt  cheatsheet.html  cheatsheet.txt  coloring.txt  colorizer.md  commands.html  commands.txt  conf.py  console-gui.html  customizing.txt  debuggers.txt  default.css  default_workbook.leo  demo.md  design.txt  directives.html  directives.txt  (+80 more)
leo/extensions/: __init__.py  asciidoc.py  aspell24.pyd  colors.py  dummy1.py  mdx_math_gi.py  optparse.py  patch_11_01.lic.txt  patch_11_01.py  path.py  readme-about-leo-extensions-folder.txt  sets.py  sh.lic  sh.py  (+2 more)
leo/rust/orange/: Cargo.toml
leo/rust/orange/src/: lib.rs  main.rs  settings.rs
leojs2/: CHANGELOG.md  README.md  package-lock.json  package.json
mypy_stubs/: leoAst.py  leoAst.pyi  leoNodes.py  leoNodes.pyi  missing_stubs
sphinx-docs/: leo.extensions.rst  leo.rst  sphinxDocs.leo
travis_tests/: test_fail.py
(+2611 files in other folders)
