[bdist_wheel]

# Leo only supports Python 3, so universal should be zero.
universal=0

[metadata]

# Becomes the home-page in `pip show leo`.
url = https://leo-editor.github.io/leo-editor/

[flake8]

exclude =
    .git,
    __pycache__,
    leo/build,
    leo/dist,
    leo/doc,
    leo/extensions,
    leo/external,
    leo/modes,
    leo/plugins,
    leo/scripts,
    leo/test,
    leo/unittests,

extend-ignore =

    # Don't check B020. It conflicts with Leo idioms like `for p in p.children():
    # Found for loop that reassigns the iterable it is iterating with each iterable value.
    B020
    
    # Don't complain on every save. Let reindent handle this later.
    # blank line contains whitespace
    W293

    # Harmless...
    
    # expected an indented block (comment)
    E115

    # unexpected indentation (comment)
    E116
    
    # over-indented (comment)
    E117
    
    # continuation line over-indented for visual indent
    E127
    
    # continuation line missing indentation or outdented.
    E122
    
    # closing bracket does not match visual indentation.
    E124
    
    # continuation line with same indent as next logical line
    E125
    
    # continuation line under-indented for visual indent.
    E128
    
    # visually indented line with same indent as next logical line
    E129
    
    # continuation line unaligned for hanging indent.
    E131

    # whitespace before '['
    E211
    
    # multiple spaces before operator
    E221
    
    # multiple spaces after operator
    E222
    
    # missing whitespace around operator
    E225
    
    # missing whitespace after ','
    E231
    
    # unexpected spaces around keyword / parameter equals
    E251
    
    # at least two spaces before inline comment
    E261
    
    # missing whitespace around parameter equals.
    E252
    
    # inline comment should start with '# '
    E262
    
    # block comment should start with '# '.
    E265
    
    # too many leading '#' for block comment
    E266
    
    # multiple spaces before keyword
    E272
    
    # missing whitespace after keyword.
    E275

    # expected 1 blank line, found 0.
    E301
    
    # expected 2 blank lines, found 1.
    E302
    
    # whitespace before ':'
    E203
    
    # too many blank lines (2)
    E303
    
    # expected 2 blank lines after class or function definition, found 0.
    E305
    
    # expected 1 blank line before a nested definition, found 0.
    E306

    # Line too long.
    E501
