
[package]
name = "orange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustpython = { git = "https://github.com/RustPython/RustPython" }
rustpython-vm = { git = "https://github.com/RustPython/RustPython" }
